# lc3-vm

./: CMakeLists.txt  README.md  exec_inst.c  lc3.h  main.c  read_image.c  test.c
